--- a/index.html
+++ b/index.html
@@ -257,7 +257,9 @@
                 setIsLoadingAI(true);
                 setError('');
                 try{
-                    const res = await fetch('/api/interpret',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({question:hexagram.question,datetime:hexagram.datetime,mainHexName:hexagram.mainHex.name,mainHexNumber:hexagram.mainHexNum,mainHexPalace:hexagram.mainHex.palace,mainHexElement:hexagram.mainHex.element,changedHexName:hexagram.changedHex.name,changedHexNumber:hexagram.changedHexNum,changingLine:hexagram.changingLine,shiYao:hexagram.shiYao,yingYao:hexagram.yingYao})});
+                    const {data:{session}} = await supabase.auth.getSession();
+                    if(!session){alert('Phiên hết hạn. Vui lòng đăng nhập lại.');return;}
+                    const res = await fetch('/api/interpret',{method:'POST',headers:{'Content-Type':'application/json','Authorization':`Bearer ${session.access_token}`},body:JSON.stringify({question:hexagram.question,datetime:hexagram.datetime,mainHexName:hexagram.mainHex.name,mainHexNumber:hexagram.mainHexNum,mainHexPalace:hexagram.mainHex.palace,mainHexElement:hexagram.mainHex.element,changedHexName:hexagram.changedHex.name,changedHexNumber:hexagram.changedHexNum,changingLine:hexagram.changingLine,shiYao:hexagram.shiYao,yingYao:hexagram.yingYao})});
                     const data = await res.json();
                     if(!res.ok){setError(data.error||'Lỗi');return;}
                     setAiInterpretation(data.interpretation);
