--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     const supabaseClient = createClient(
       "https://qqadeyowwdslkkuesdxg.supabase.co",
-      "YOUR_PUBLIC_ANON_KEY"
+      "sb_publishable_zoL3L3WvMp5svcenqJQ7ew_aexnJmK0"
     );
 
     function App() {
